tests/spec/parse/snapshots/while_loop.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let mut count = 0;
    while count < 10 {
      print(count);
      count = count + 1;
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "count",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 23,
                                    byte_length: 5,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                            mut_span: Some(
                                Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 3,
                                },
                            ),
                        },
                        value: Literal {
                            literal: Integer {
                                value: 0,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 31,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 17,
                        },
                    },
                    While {
                        condition: Binary {
                            operator: LessThan,
                            left: Identifier {
                                value: "count",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 42,
                                    byte_length: 5,
                                },
                                resolution: Unresolved,
                            },
                            right: Literal {
                                literal: Integer {
                                    value: 10,
                                    text: None,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 50,
                                    byte_length: 2,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 42,
                                byte_length: 10,
                            },
                        },
                        body: Block {
                            items: [
                                Call {
                                    expression: Identifier {
                                        value: "print",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 59,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Identifier {
                                            value: "count",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 65,
                                                byte_length: 5,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 59,
                                        byte_length: 12,
                                    },
                                    call_kind: Unresolved,
                                },
                                Assignment {
                                    target: Identifier {
                                        value: "count",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 77,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    value: Binary {
                                        operator: Addition,
                                        left: Identifier {
                                            value: "count",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 85,
                                                byte_length: 5,
                                            },
                                            resolution: Unresolved,
                                        },
                                        right: Literal {
                                            literal: Integer {
                                                value: 1,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 93,
                                                byte_length: 1,
                                            },
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 85,
                                            byte_length: 9,
                                        },
                                    },
                                    compound_operator: None,
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 77,
                                        byte_length: 17,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 53,
                                byte_length: 46,
                            },
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 36,
                            byte_length: 63,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 90,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 100,
        },
    },
]
