tests/spec/parse/snapshots/writable_qualifier_duplicate_mut_error.snap
---
source: tests/spec/parse/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:1:13]
 1 │ fn f(x: mut mut Slice<int>) -> int { 0 }
   ·             ─┬─
   ·              ╰── duplicate `mut` qualifier
   ╰────
  help: Write `mut` once · code: [parse.syntax_error]
