tests/spec/parse/snapshots/writable_qualifier_enum_payload.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum Holder { Tags(mut Slice<string>), None }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "Holder",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 6,
        },
        generics: [],
        variants: [
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Tags",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 15,
                    byte_length: 4,
                },
                fields: Tuple(
                    [
                        EnumFieldDefinition {
                            name: "field0",
                            name_span: Span {
                                file_id: 4294967295,
                                byte_offset: 0,
                                byte_length: 0,
                            },
                            annotation: Constructor {
                                name: "Slice",
                                params: [
                                    Constructor {
                                        name: "string",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 30,
                                            byte_length: 6,
                                        },
                                    },
                                ],
                                writable: true,
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 24,
                                    byte_length: 13,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                    ],
                ),
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "None",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 40,
                    byte_length: 4,
                },
                fields: Unit,
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 45,
        },
    },
]
