tests/spec/parse/snapshots/writable_qualifier_nested_type_argument.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn rows(data: mut Slice<mut Slice<int>>) -> int { 0 }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "rows",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "data",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 4,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Slice",
                        params: [
                            Constructor {
                                name: "Slice",
                                params: [
                                    Constructor {
                                        name: "int",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 35,
                                            byte_length: 3,
                                        },
                                    },
                                ],
                                writable: true,
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 29,
                                    byte_length: 10,
                                },
                            },
                        ],
                        writable: true,
                        span: Span {
                            file_id: 0,
                            byte_offset: 19,
                            byte_length: 21,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "int",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 45,
                byte_length: 3,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Literal {
                        literal: Integer {
                            value: 0,
                            text: None,
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 51,
                            byte_length: 1,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 49,
                    byte_length: 5,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 53,
        },
    },
]
