tests/spec/parse/snapshots/writable_qualifier_positions.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Batch { items: mut Slice<int>, tags: Slice<string> }
  fn fill(data: mut Slice<int>) -> mut Slice<int> { data }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Batch",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 5,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "items",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 16,
                        byte_length: 5,
                    },
                    annotation: Constructor {
                        name: "Slice",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 33,
                                    byte_length: 3,
                                },
                            },
                        ],
                        writable: true,
                        span: Span {
                            file_id: 0,
                            byte_offset: 27,
                            byte_length: 10,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
                StructFieldDefinition {
                    doc: None,
                    name: "tags",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 39,
                        byte_length: 4,
                    },
                    annotation: Constructor {
                        name: "Slice",
                        params: [
                            Constructor {
                                name: "string",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 51,
                                    byte_length: 6,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 45,
                            byte_length: 13,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 59,
        },
    },
    Function {
        doc: None,
        attributes: [],
        name: "fill",
        name_span: Span {
            file_id: 0,
            byte_offset: 64,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "data",
                    span: Span {
                        file_id: 0,
                        byte_offset: 69,
                        byte_length: 4,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Slice",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 85,
                                    byte_length: 3,
                                },
                            },
                        ],
                        writable: true,
                        span: Span {
                            file_id: 0,
                            byte_offset: 79,
                            byte_length: 10,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "Slice",
            params: [
                Constructor {
                    name: "int",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 104,
                        byte_length: 3,
                    },
                },
            ],
            writable: true,
            span: Span {
                file_id: 0,
                byte_offset: 98,
                byte_length: 10,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Identifier {
                        value: "data",
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 111,
                            byte_length: 4,
                        },
                        resolution: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 109,
                    byte_length: 8,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 61,
            byte_length: 56,
        },
    },
]
